--- a/index.html
+++ b/index.html
@@ -1,36 +1,440 @@
-<!DOCTYPE html>
+<!-- Mother Day One-page (single file)
+     BY TAWAN
+     Created for: ตะวัน (TAWAN)
+-->
+<!doctype html>
 <html lang="th">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>วันแม่ของตะวัน 💖</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>วันแม่ — ขอบคุณแม่ | BY TAWAN</title>
+  <style>
+    :root{
+      --bg1:#fff5f7;
+      --accent:#ff6b99;
+      --accent-2:#ffb3c6;
+      --card:#ffffffcc;
+      --glass: rgba(255,255,255,0.6);
+      --text:#2b2b2b;
+      --muted:#6b6b6b;
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      font-family: "Noto Sans Thai", "Inter", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+      background: radial-gradient(circle at 10% 10%, var(--accent-2), transparent 20%),
+                  radial-gradient(circle at 90% 90%, #fff0f5, transparent 20%),
+                  linear-gradient(180deg, var(--bg1), #fff);
+      color:var(--text);
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
+      padding:24px;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      min-height:100vh;
+    }
+
+    .wrap{
+      width:min(1100px, 96%);
+      margin:16px auto;
+      display:grid;
+      grid-template-columns: 1fr 420px;
+      gap:24px;
+      align-items:start;
+    }
+
+    .card{
+      background:var(--card);
+      border-radius:18px;
+      padding:28px;
+      box-shadow: 0 8px 30px rgba(0,0,0,0.08);
+      backdrop-filter: blur(6px);
+    }
+
+    header h1{
+      margin:0 0 8px 0;
+      font-size:2.0rem;
+      letter-spacing: -0.5px;
+    }
+    header p.lead{
+      margin:0 0 18px 0;
+      color:var(--muted);
+    }
+
+    .hero{
+      position:relative;
+      overflow:hidden;
+      border-radius:12px;
+      padding:18px;
+      display:flex;
+      gap:18px;
+      align-items:center;
+    }
+    .hero .img{
+      width:46%;
+      min-height:180px;
+      border-radius:10px;
+      background:
+        linear-gradient(180deg, rgba(255,255,255,0.2), rgba(255,255,255,0.05)),
+        url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="400" height="300"><rect fill="%23ffeef6" width="100%" height="100%"/><g fill="%23ff9fb8" opacity="0.15"><circle cx="50" cy="40" r="80"/><circle cx="320" cy="180" r="120"/></g></svg>') center/cover no-repeat;
+      display:flex;
+      align-items:flex-end;
+      justify-content:center;
+      padding:12px;
+      color:#fff;
+      font-weight:700;
+      box-shadow: inset 0 -10px 30px rgba(0,0,0,0.05);
+    }
+    .hero .text{
+      width:54%;
+    }
+    .hero h2{margin:0 0 6px 0;font-size:1.25rem}
+    .hero p{margin:0;color:var(--muted)}
+
+    /* wishes list */
+    .wishes{
+      margin-top:18px;
+      display:flex;
+      flex-direction:column;
+      gap:10px;
+      max-height:240px;
+      overflow:auto;
+      padding-right:6px;
+    }
+    .wish{
+      background:linear-gradient(90deg, rgba(255,255,255,0.9), rgba(255,255,255,0.8));
+      border-radius:10px;
+      padding:10px 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.04);
+      font-size:0.95rem;
+    }
+
+    form .row{display:flex;gap:10px;margin-bottom:10px}
+    input[type="text"], textarea{
+      width:100%;
+      padding:10px 12px;
+      border-radius:10px;
+      border:1px solid #eee;
+      outline:none;
+      font-size:0.95rem;
+      resize:vertical;
+    }
+    button{
+      padding:10px 14px;
+      border-radius:10px;
+      border:0;
+      background:linear-gradient(90deg,var(--accent),var(--accent-2));
+      color:#fff;
+      font-weight:600;
+      cursor:pointer;
+      box-shadow: 0 6px 18px rgba(255,107,153,0.18);
+    }
+    .muted{color:var(--muted);font-size:0.85rem}
+
+    /* right column */
+    .side{
+      display:flex;
+      flex-direction:column;
+      gap:14px;
+    }
+    .music {
+      display:flex;
+      gap:10px;
+      align-items:center;
+      padding:12px;
+      border-radius:12px;
+      background:linear-gradient(180deg,#fff,#fff0);
+    }
+    .controls{display:flex;gap:8px;align-items:center}
+    .big-heart{
+      width:100%;
+      height:160px;
+      border-radius:12px;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      background:linear-gradient(180deg,#fff,#fff0);
+      position:relative;
+    }
+
+    /* floating hearts */
+    .floating{
+      position:absolute;
+      inset:0;
+      pointer-events:none;
+      overflow:hidden;
+    }
+    .floating i{
+      position:absolute;
+      font-style:normal;
+      transform:translateY(0);
+      opacity:0.9;
+      user-select:none;
+      will-change:transform,opacity;
+      animation:floatUp linear infinite;
+    }
+    @keyframes floatUp{
+      from{transform:translateY(20vh) scale(0.8); opacity:0.9}
+      to{transform:translateY(-10vh) scale(1.2); opacity:0}
+    }
+
+    footer{
+      margin-top:18px;
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      color:var(--muted);
+      font-size:0.85rem;
+    }
+
+    .watermark{
+      position:fixed;
+      right:18px;
+      bottom:18px;
+      font-size:12px;
+      opacity:0.28;
+      transform:rotate(-18deg);
+      pointer-events:none;
+      user-select:none;
+      color:#ff7aa0;
+      font-weight:700;
+      letter-spacing:1px;
+    }
+
+    /* responsive */
+    @media (max-width:980px){
+      .wrap{grid-template-columns:1fr; padding-bottom:60px}
+      .hero .img{display:none}
+    }
+  </style>
 </head>
 <body>
-  <h1>💖 วันแม่ของตะวัน 💖</h1>
+  <div class="wrap">
+    <main class="card">
+      <header>
+        <h1>สุขสันต์วันแม่ 💐</h1>
+        <p class="lead">ขอให้แม่ทุกท่านมีความสุข สุขภาพแข็งแรง และรู้ว่ารักจากลูกอยู่ใกล้เสมอ</p>
+      </header>
 
-  <div class="video-container">
-    <iframe 
-      src="https://www.youtube.com/embed/EkQ4E0bWEVY?autoplay=1&loop=1&playlist=EkQ4E0bWEVY" 
-      title="เพลงวันแม่" 
-      frameborder="0" 
-      allow="autoplay; encrypted-media" 
-      allowfullscreen>
-    </iframe>
+      <section class="hero">
+        <div class="img">รูปความทรงจำของแม่กับลูก</div>
+        <div class="text">
+          <h2>เขียนคำอวยพรให้แม่</h2>
+          <p class="muted">พิมพ์คำอวยพรแล้วกดส่ง ตะวันจะแสดงให้ดูเหมือนการ์ดน่ารัก ๆ</p>
+
+          <form id="wishForm" onsubmit="return false;">
+            <div class="row">
+              <input id="fromName" type="text" placeholder="ชื่อคุณ (เช่น ตะวัน)" />
+            </div>
+            <div>
+              <textarea id="wishText" rows="4" placeholder="พิมพ์คำอวยพรถึงแม่..."></textarea>
+            </div>
+            <div style="display:flex;gap:8px;margin-top:10px">
+              <button id="sendBtn">ส่งคำอวยพร</button>
+              <button id="surpriseBtn" type="button">สุ่มคำสั้น ๆ</button>
+            </div>
+          </form>
+
+          <div class="wishes" id="wishesList" aria-live="polite">
+            <!-- wishes will appear here -->
+          </div>
+        </div>
+      </section>
+
+      <footer>
+        <div>แชร์ให้แม่ดูหรือเซฟเป็นภาพการ์ด</div>
+        <div class="muted">ตะวัน — ส่งความรักแทนใจ</div>
+      </footer>
+    </main>
+
+    <aside class="side">
+      <div class="card music">
+        <div>
+          <div style="font-weight:700">เพลงบรรเลงเบา ๆ</div>
+          <div class="muted">กดเล่นเพื่อเพิ่มบรรยากาศ (เปิดได้ทั้งเบราว์เซอร์บนมือถือ)</div>
+        </div>
+        <div style="margin-left:auto" class="controls">
+          <button id="playBtn">เล่นเพลง</button>
+          <button id="stopBtn">หยุด</button>
+        </div>
+      </div>
+
+      <div class="card big-heart">
+        <div style="text-align:center">
+          <div style="font-size:1.1rem;font-weight:700">เพื่อแม่เสมอ</div>
+          <div style="margin-top:8px" class="muted">ความรักที่ไม่จาง</div>
+        </div>
+        <div class="floating" id="floating"></div>
+      </div>
+
+      <div class="card">
+        <h3 style="margin-top:0">คำแนะนำการใช้งาน</h3>
+        <ul style="margin:0;padding-left:18px;color:var(--muted)">
+          <li>พิมพ์คำอวยพร แล้วกด "ส่งคำอวยพร"</li>
+          <li>ระบบจะแสดงการ์ดในแถบกลาง — สามารถคัดลอกหรือจับภาพหน้าจอเพื่อส่งให้แม่ได้</li>
+          <li>แตะปุ่ม "สุ่มคำสั้น ๆ" เพื่อได้ไอเดียถ้าติดขัด</li>
+        </ul>
+      </div>
+    </aside>
   </div>
 
-  <div class="certificate-container">
-    <div class="card" id="card">
-      <div class="message" id="message">กำลังโหลดคำอวยพร...</div>
-    </div>
-  </div>
+  <div class="watermark">BY TAWAN</div>
 
-  <div class="button-container">
-    <button id="prevBtn">⏮️ ก่อนหน้า</button>
-    <button id="randomBtn">🎲 สุ่มคำอวยพร</button>
-    <button id="nextBtn">⏭️ ถัดไป</button>
-  </div>
+  <audio id="bgAudio" loop preload="none">
+    <!-- A lightweight royalty-free audio data: silent placeholder; user can swap with a URL if desired -->
+    <!-- For demo, we won't embed long audio. If you want to load from YouTube or file, replace src with URL. -->
+  </audio>
 
-  <script src="scripts.js"></script>
+  <script>
+    // BY TAWAN - small interactive script
+    const wishesList = document.getElementById('wishesList');
+    const sendBtn = document.getElementById('sendBtn');
+    const surpriseBtn = document.getElementById('surpriseBtn');
+    const fromName = document.getElementById('fromName');
+    const wishText = document.getElementById('wishText');
+    const floating = document.getElementById('floating');
+
+    // small preset phrases
+    const presets = [
+      'รักแม่มากที่สุดในโลกครับ ❤️',
+      'ขอบคุณที่เลี้ยงดูและทุ่มเทเสมอ',
+      'ขอให้แม่สุขภาพแข็งแรง อายุยืนๆ นะคับ',
+      'ขอให้ทุกวันของแม่เต็มไปด้วยรอยยิ้ม',
+      'ขอให้ความรักของแม่อบอุ่นเสมอ'
+    ];
+
+    function addWish(name, text){
+      const div = document.createElement('div');
+      div.className = 'wish';
+      const who = name ? `<strong>${escapeHtml(name)}</strong>` : '<strong>ลูกใจดี</strong>';
+      div.innerHTML = `${who} — <span style="color:var(--muted);font-size:0.9rem">ตอนนี้</span><div style="margin-top:6px">${escapeHtml(text)}</div>`;
+      wishesList.prepend(div);
+      // auto-scroll to top (visible)
+      wishesList.scrollTop = 0;
+      // tiny heart burst
+      burstHearts();
+    }
+
+    sendBtn.addEventListener('click', ()=>{
+      const text = wishText.value.trim();
+      if(!text){
+        // playful prompt
+        wishText.placeholder = 'ลองพิมพ์อะไรสั้น ๆ ให้แม่ดูสิ 😊';
+        wishText.focus();
+        return;
+      }
+      addWish(fromName.value.trim(), text);
+      wishText.value = '';
+    });
+
+    surpriseBtn.addEventListener('click', ()=>{
+      const p = presets[Math.floor(Math.random()*presets.length)];
+      wishText.value = p;
+      wishText.focus();
+    });
+
+    // small helper
+    function escapeHtml(s){
+      return s.replaceAll('&','&amp;').replaceAll('<','&lt;').replaceAll('>','&gt;').replaceAll('"','&quot;');
+    }
+
+    // floating hearts generator
+    function burstHearts(){
+      const count = 6;
+      for(let i=0;i<count;i++){
+        const el = document.createElement('i');
+        el.textContent = '❤';
+        const size = 14 + Math.random()*32;
+        el.style.fontSize = size+'px';
+        el.style.left = (10 + Math.random()*80) + '%';
+        el.style.bottom = '-10%';
+        el.style.opacity = 0.9;
+        const dur = 3000 + Math.random()*2500;
+        el.style.animationDuration = dur + 'ms';
+        el.style.transform = 'translateY(0) rotate(' + (Math.random()*30-15) + 'deg)';
+        floating.appendChild(el);
+        // remove when done
+        setTimeout(()=> el.remove(), dur+50);
+      }
+    }
+
+    // background audio control (user can replace src with their own file)
+    const bgAudio = document.getElementById('bgAudio');
+    const playBtn = document.getElementById('playBtn');
+    const stopBtn = document.getElementById('stopBtn');
+
+    // optional: load a short mellow loop (uncomment and replace with your URL)
+    // bgAudio.src = 'https://example.com/soft-loop.mp3';
+
+    playBtn.addEventListener('click', async ()=>{
+      try{
+        if(!bgAudio.src){
+          // gentle fallback beep via WebAudio for demo (no external file)
+          simpleMelody();
+          playBtn.textContent = 'เล่น (demo)';
+          return;
+        }
+        await bgAudio.play();
+        playBtn.textContent = 'กำลังเล่น';
+      }catch(e){
+        console.warn('audio error',e);
+      }
+    });
+
+    stopBtn.addEventListener('click', ()=>{
+      if(!bgAudio.src){
+        playBtn.textContent = 'เล่นเพลง';
+        return;
+      }
+      bgAudio.pause();
+      bgAudio.currentTime = 0;
+      playBtn.textContent = 'เล่นเพลง';
+    });
+
+    // simple WebAudio melody (demo only)
+    function simpleMelody(){
+      if(window._melodyPlaying) return;
+      const ctx = new (window.AudioContext || window.webkitAudioContext)();
+      window._melodyPlaying = true;
+      const now = ctx.currentTime;
+      const notes = [523.25, 659.25, 783.99, 659.25]; // C5 E5 G5 E5
+      const dur = 0.5;
+      notes.forEach((f,i)=>{
+        const o = ctx.createOscillator();
+        const g = ctx.createGain();
+        o.type = 'sine';
+        o.frequency.value = f;
+        g.gain.value = 0.0001;
+        o.connect(g); g.connect(ctx.destination);
+        o.start(now + i*dur);
+        g.gain.linearRampToValueAtTime(0.08, now + i*dur + 0.01);
+        g.gain.linearRampToValueAtTime(0.0001, now + i*dur + dur - 0.02);
+        o.stop(now + i*dur + dur);
+      });
+      setTimeout(()=>{ window._melodyPlaying=false; }, notes.length * dur * 1000 + 300);
+    }
+
+    // keyboard shortcut: press "m" to focus message
+    document.addEventListener('keydown', (e)=>{
+      if(e.key === 'm' || e.key === 'M'){ wishText.focus(); }
+    });
+
+    // small seed content
+    addWish('ต้าวฟู', 'สุขสันต์วันแม่นะคับ รักแม่ที่สุดในโลกเลย 💕 — จากตะวัน');
+
+    // Accessibility: allow Enter to send when focus in textarea + ctrl/alt
+    wishText.addEventListener('keydown', (e)=>{
+      if(e.key === 'Enter' && (e.ctrlKey || e.metaKey)){
+        sendBtn.click();
+      }
+    });
+
+    // prevent accidental form submission via Enter in text input
+    fromName.addEventListener('keydown', (e)=>{
+      if(e.key === 'Enter') e.preventDefault();
+    });
+  </script>
 </body>
 </html>
