--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   </header>
 
   <section id="blessings" class="fade-in">
-    <p>ขอให้แม่มีความสุขมาก ๆ สุขภาพแข็งแรงทุกวันนะคะ</p>
+    <p>ขอให้แม่มีความสุขมาก ๆ สุขภาพแข็งแรงทุกวันนะคับ</p>
     <p>ขอบคุณที่เป็นแสงสว่างและแรงบันดาลใจในชีวิตลูก</p>
     <p>รักแม่มากกว่าคำพูดใด ๆ ในโลกใบนี้</p>
     <p>แม่คือฮีโร่ที่ยิ่งใหญ่ที่สุดในใจลูกเสมอ</p>
@@ -140,7 +140,7 @@
     <p>ลูกจะดูแลแม่ให้ดีที่สุดเท่าที่ทำได้</p>
     <p>ขอบคุณที่คอยให้กำลังใจและอยู่เคียงข้างลูกเสมอ</p>
     <p>ขอให้แม่สมหวังทุกประการในชีวิต</p>
-    <p>รักแม่ที่สุดในโลกใบนี้ตลอดไปค่ะ</p>
+    <p>รักแม่ที่สุดในโลกใบนี้ตลอดไปครับ</p>
   </section>
 
 </div>
