--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
     <div class="content">
         <!-- ภาพครอบครัว (สามารถเปลี่ยนเป็นรูปของคุณเอง) -->
         <img
-          src="https://i.imgur.com/JqYeYnW.jpg"
+          src="https://cdn.discordapp.com/attachments/1047670349262753852/1404456232521039924/20200601_095621.jpg?ex=689b414b&is=6899efcb&hm=2d6260f2e5c647dc8628dede733b4add2f1afe86430eca6fde36a90a6e9d94f8&"
           alt="ครอบครัว"
           class="family-photo animate__animated animate__zoomIn"
           title="ครอบครัวคือที่รัก"
