--- a/index.html
+++ b/index.html
@@ -583,10 +583,10 @@
             const currentSrc = bgMusicFrame.src;
             if (currentSrc.includes("autoplay=1")) {
               bgMusicFrame.src = currentSrc.replace("autoplay=1", "autoplay=0");
-              musicBtn.textContent = 'เปิดเพลง ♫';
+              musicBtn.textContent = 'เปิดเพลง ♫(ทำให้กดเล่นเฉยๆเพลงไม่มีเพราะแก้ไม่ได้555)';
             } else {
               bgMusicFrame.src = currentSrc.replace("autoplay=0", "autoplay=1");
-              musicBtn.textContent = 'ปิดเพลง ♫';
+              musicBtn.textContent = 'ปิดเพลง ♫(ทำให้กดเล่นเฉยๆเพลงไม่มีเพราะแก้ไม่ได้555)';
             }
         });
 
